--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "4.1.1",
     "component-template": "^1.0.0",
+    "deep-freeze": "^0.0.1",
     "expect.js": "^0.3.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -18,5 +19,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.9.0"
   }
 }
