--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,11 @@
         "no-unreachable": 0,
         "react/jsx-filename-extension": 0,
         "react/prefer-stateless-function": 0,
-        "object-shorthand": 0
+        "object-shorthand": 0,
+        "react/jsx-first-prop-new-line": 0,
+        "react/jsx-closing-tag-location": 0,
+        "react/no-typos": 0,
+        "react/forbid-prop-types": 0,
+        "no-plusplus": 0
     }
 }
