--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "component-template": "^1.0.0",
     "deep-freeze": "^0.0.1",
     "expect.js": "^0.3.1",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
