--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
         "react/jsx-closing-tag-location": 0,
         "react/no-typos": 0,
         "react/forbid-prop-types": 0,
-        "no-plusplus": 0
+        "no-plusplus": 0,
+        "react/jsx-closing-bracket-location": 0
     }
 }
