--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
         "react/no-typos": 0,
         "react/forbid-prop-types": 0,
         "no-plusplus": 0,
-        "react/jsx-closing-bracket-location": 0
+        "react/jsx-closing-bracket-location": 0,
+        "no-shadow": 0
     }
 }
