--- a/.eslintrc
+++ b/.eslintrc
@@ -1,30 +1,34 @@
 {
-    "root": true,
-    "extends": "airbnb",
-    "rules": {
-        "no-console": 0,
-        "eol-last": 0,
-        "comma-dangle": 0,
-        "arrow-body-style": 1,
-        "indent": ["error", 2],
-        "linebreak-style": ["error", "unix"],
-        "quotes": ["error", "single"],
-        "semi": ["error", "always"],
-        "no-cond-assign": ["error", "always"],
-        "arrow-parens": 0,
-        "no-unreachable": 0,
-        "react/jsx-filename-extension": 0,
-        "react/prefer-stateless-function": 0,
-        "object-shorthand": 0,
-        "react/jsx-first-prop-new-line": 0,
-        "react/jsx-closing-tag-location": 0,
-        "react/no-typos": 0,
-        "react/forbid-prop-types": 0,
-        "no-plusplus": 0,
-        "react/jsx-closing-bracket-location": 0,
-        "no-shadow": 0,
-        "react/jsx-indent-props": 0,
-        "prefer-destructuring": 0,
-        "react/no-multi-comp": 0
-    }
+	"root": true,
+	"extends": "airbnb",
+	"rules": {
+		"no-console": 0,
+		"eol-last": 0,
+		"comma-dangle": 0,
+		"arrow-body-style": 1,
+		"indent": ["error", 2],
+		"linebreak-style": ["error", "unix"],
+		"quotes": ["error", "single"],
+		"semi": ["error", "always"],
+		"no-cond-assign": ["error", "always"],
+		"arrow-parens": 0,
+		"no-unreachable": 0,
+		"react/jsx-filename-extension": 0,
+		"react/prefer-stateless-function": 0,
+		"object-shorthand": 0,
+		"react/jsx-first-prop-new-line": 0,
+		"react/jsx-closing-tag-location": 0,
+		"react/no-typos": 0,
+		"react/forbid-prop-types": 0,
+		"no-plusplus": 0,
+		"react/jsx-closing-bracket-location": 0,
+		"no-shadow": 0,
+		"react/jsx-indent-props": 0,
+		"prefer-destructuring": 0,
+		"react/no-multi-comp": 0
+	},
+	"globals": {
+		"window": true,
+		"document": true
+	}
 }
