--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "1.1.4",
     "react-toolbox": "^2.0.0-beta.12",
     "reactstrap": "^6.0.1",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.2"
   },
   "scripts": {
     "start": "react-scripts start",
